16804
{code}
object Test extends App {
  val x = s"1"
  val y = s"2"
}
{code}

{code}
C:\Projects\Kepler\sandbox\Test.scala:3: error: ';' expected but 'val' found.
  val y = s"2"
  ^
one error found
{code}
